--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Super Chinese</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/webp" href="favicon.ico" sizes="32x32" />
-    <link rel="icon" type="image/webp" href="favicon.ico" sizes="192x192" />
-    <meta
-      name="description"
-      content="Học tiếng Trung, học tiếng Trung Quốc, học từ vựng tiếng Trung, học chữ Hán, luyện nghe HSK."
-    />
-    <meta property="og:title" content="Super Chinese" />
-    <meta property="og:image" content="https://superchinese01.web.app/assets/images/thumbnail.webp" />
-  </head>
-  <body>
-    <app-root></app-root>
-  </body>
+
+<head>
+  <meta http-equiv="Cache-Control"
+        content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma"
+        content="no-cache" />
+  <meta http-equiv="Expires"
+        content="0" />
+  <meta charset="utf-8" />
+  <title>Super Chinese</title>
+  <base href="/" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1" />
+  <link rel="icon"
+        type="image/webp"
+        href="favicon.ico"
+        sizes="32x32" />
+  <link rel="icon"
+        type="image/webp"
+        href="favicon.ico"
+        sizes="192x192" />
+  <meta name="description"
+        content="Học tiếng Trung, học tiếng Trung Quốc, học từ vựng tiếng Trung, học chữ Hán, luyện nghe HSK." />
+  <meta property="og:title"
+        content="Super Chinese" />
+  <meta property="og:image"
+        content="https://superchinese01.web.app/assets/images/thumbnail.webp" />
+</head>
+
+<body>
+  <app-root></app-root>
+</body>
+
 </html>
