--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+  <meta http-equiv="Cache-Control"
+        content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma"
+        content="no-cache" />
+  <meta http-equiv="Expires"
+        content="0" />
+  <meta charset="utf-8" />
   <title>Super Chinese</title>
   <base href="/" />
   <meta name="viewport"
